Horizontal scroll fixes

--- a/src/style/_global.scss
+++ b/src/style/_global.scss
@@ -3,7 +3,8 @@
   width: 100%;
   justify-content: center;
   img {
-    max-width: 400px;
+    width: 400px;
+    max-width: 100%;
   }
 }
 
@@ -57,6 +58,7 @@
 
 .pagination {
   justify-content: center;
+  max-width: 100%;
   .page-item {
     .page-link {
       color: black;
